python/latex2wolfram/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> MAIN
Rule 1     MAIN -> Expression
Rule 2     Factor -> NUMBER
Rule 3     Factor -> Identifier
Rule 4     Factor -> INFINITY
Rule 5     Factor -> LPAREN Expression RPAREN
Rule 6     Term -> Term TIMES Factor
Rule 7     Term -> Term DIVIDE Factor
Rule 8     Term -> Term MOD Factor
Rule 9     Term -> Term CARET LBRACE Factor RBRACE
Rule 10    Term -> Factor
Rule 11    Expression -> Expression PLUS Term
Rule 12    Expression -> Expression MINUS Term
Rule 13    Expression -> Term
Rule 14    Expression -> FRAC LBRACE Expression RBRACE LBRACE Expression RBRACE
Rule 15    Factor -> SQRT LBRACE Expression RBRACE
Rule 16    Factor -> LFLOOR Expression RFLOOR
Rule 17    Factor -> LCEIL Expression RCEIL
Rule 18    Factor -> PIPE Expression PIPE
Rule 19    Factor -> SIN LPAREN Expression RPAREN
Rule 20    Factor -> COS LPAREN Expression RPAREN
Rule 21    Factor -> TAN LPAREN Expression RPAREN
Rule 22    Factor -> ATAN LPAREN Expression COMMA Expression RPAREN
Rule 23    Factor -> ATAN LPAREN Expression RPAREN
Rule 24    Factor -> LOG LPAREN Expression RPAREN
Rule 25    Factor -> LN LPAREN Expression RPAREN
Rule 26    Factor -> EXP LPAREN Expression RPAREN
Rule 27    Factor -> Identifier LPAREN ExpressionList RPAREN
Rule 28    Factor -> Identifier LPAREN RPAREN
Rule 29    Factor -> INTEGRAL UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
Rule 30    Factor -> INTEGRAL UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
Rule 31    Factor -> INTEGRAL CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
Rule 32    Factor -> INTEGRAL Expression DIFFERENTIAL
Rule 33    Expression -> FRAC LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
Rule 34    Expression -> FRAC LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression
Rule 35    Identifier -> ID
Rule 36    ExpressionList -> ExpressionList COMMA Expression
Rule 37    ExpressionList -> Expression

Terminals, with rules where they appear

ATAN                 : 22 23
CARET                : 9 29 31 34 34
COMMA                : 22 36
COS                  : 20
D                    : 33 34
DIFFERENTIAL         : 29 30 31 32 33 34
DIVIDE               : 7
EXP                  : 26
FRAC                 : 14 33 34
ID                   : 35
INFINITY             : 4
INTEGRAL             : 29 30 31 32
LBRACE               : 9 14 14 15 29 29 30 31 33 33 34 34 34 34
LCEIL                : 17
LFLOOR               : 16
LN                   : 25
LOG                  : 24
LPAREN               : 5 19 20 21 22 23 24 25 26 27 28
MINUS                : 12
MOD                  : 8
NUMBER               : 2 34 34
PIPE                 : 18 18
PLUS                 : 11
RBRACE               : 9 14 14 15 29 29 30 31 33 33 34 34 34 34
RCEIL                : 17
RFLOOR               : 16
RPAREN               : 5 19 20 21 22 23 24 25 26 27 28
SIN                  : 19
SQRT                 : 15
TAN                  : 21
TIMES                : 6
UNDERLINE            : 29 30
error                : 

Nonterminals, with rules where they appear

Expression           : 1 5 11 12 14 14 15 16 17 18 19 20 21 22 22 23 24 25 26 29 29 29 30 30 31 31 32 33 34 36 37
ExpressionList       : 27 36
Factor               : 6 7 8 9 10
Identifier           : 3 27 28
MAIN                 : 0
Term                 : 6 7 8 9 11 12 13

Parsing method: LALR

state 0

    (0) S' -> . MAIN
    (1) MAIN -> . Expression
    (11) Expression -> . Expression PLUS Term
    (12) Expression -> . Expression MINUS Term
    (13) Expression -> . Term
    (14) Expression -> . FRAC LBRACE Expression RBRACE LBRACE Expression RBRACE
    (33) Expression -> . FRAC LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
    (34) Expression -> . FRAC LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression
    (6) Term -> . Term TIMES Factor
    (7) Term -> . Term DIVIDE Factor
    (8) Term -> . Term MOD Factor
    (9) Term -> . Term CARET LBRACE Factor RBRACE
    (10) Term -> . Factor
    (2) Factor -> . NUMBER
    (3) Factor -> . Identifier
    (4) Factor -> . INFINITY
    (5) Factor -> . LPAREN Expression RPAREN
    (15) Factor -> . SQRT LBRACE Expression RBRACE
    (16) Factor -> . LFLOOR Expression RFLOOR
    (17) Factor -> . LCEIL Expression RCEIL
    (18) Factor -> . PIPE Expression PIPE
    (19) Factor -> . SIN LPAREN Expression RPAREN
    (20) Factor -> . COS LPAREN Expression RPAREN
    (21) Factor -> . TAN LPAREN Expression RPAREN
    (22) Factor -> . ATAN LPAREN Expression COMMA Expression RPAREN
    (23) Factor -> . ATAN LPAREN Expression RPAREN
    (24) Factor -> . LOG LPAREN Expression RPAREN
    (25) Factor -> . LN LPAREN Expression RPAREN
    (26) Factor -> . EXP LPAREN Expression RPAREN
    (27) Factor -> . Identifier LPAREN ExpressionList RPAREN
    (28) Factor -> . Identifier LPAREN RPAREN
    (29) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (30) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
    (31) Factor -> . INTEGRAL CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (32) Factor -> . INTEGRAL Expression DIFFERENTIAL
    (35) Identifier -> . ID

    FRAC            shift and go to state 15
    NUMBER          shift and go to state 6
    INFINITY        shift and go to state 9
    LPAREN          shift and go to state 17
    SQRT            shift and go to state 21
    LFLOOR          shift and go to state 1
    LCEIL           shift and go to state 4
    PIPE            shift and go to state 12
    SIN             shift and go to state 11
    COS             shift and go to state 2
    TAN             shift and go to state 13
    ATAN            shift and go to state 16
    LOG             shift and go to state 3
    LN              shift and go to state 10
    EXP             shift and go to state 7
    INTEGRAL        shift and go to state 5
    ID              shift and go to state 20

    Term                           shift and go to state 14
    Identifier                     shift and go to state 18
    Factor                         shift and go to state 8
    MAIN                           shift and go to state 22
    Expression                     shift and go to state 19

state 1

    (16) Factor -> LFLOOR . Expression RFLOOR
    (11) Expression -> . Expression PLUS Term
    (12) Expression -> . Expression MINUS Term
    (13) Expression -> . Term
    (14) Expression -> . FRAC LBRACE Expression RBRACE LBRACE Expression RBRACE
    (33) Expression -> . FRAC LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
    (34) Expression -> . FRAC LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression
    (6) Term -> . Term TIMES Factor
    (7) Term -> . Term DIVIDE Factor
    (8) Term -> . Term MOD Factor
    (9) Term -> . Term CARET LBRACE Factor RBRACE
    (10) Term -> . Factor
    (2) Factor -> . NUMBER
    (3) Factor -> . Identifier
    (4) Factor -> . INFINITY
    (5) Factor -> . LPAREN Expression RPAREN
    (15) Factor -> . SQRT LBRACE Expression RBRACE
    (16) Factor -> . LFLOOR Expression RFLOOR
    (17) Factor -> . LCEIL Expression RCEIL
    (18) Factor -> . PIPE Expression PIPE
    (19) Factor -> . SIN LPAREN Expression RPAREN
    (20) Factor -> . COS LPAREN Expression RPAREN
    (21) Factor -> . TAN LPAREN Expression RPAREN
    (22) Factor -> . ATAN LPAREN Expression COMMA Expression RPAREN
    (23) Factor -> . ATAN LPAREN Expression RPAREN
    (24) Factor -> . LOG LPAREN Expression RPAREN
    (25) Factor -> . LN LPAREN Expression RPAREN
    (26) Factor -> . EXP LPAREN Expression RPAREN
    (27) Factor -> . Identifier LPAREN ExpressionList RPAREN
    (28) Factor -> . Identifier LPAREN RPAREN
    (29) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (30) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
    (31) Factor -> . INTEGRAL CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (32) Factor -> . INTEGRAL Expression DIFFERENTIAL
    (35) Identifier -> . ID

    FRAC            shift and go to state 15
    NUMBER          shift and go to state 6
    INFINITY        shift and go to state 9
    LPAREN          shift and go to state 17
    SQRT            shift and go to state 21
    LFLOOR          shift and go to state 1
    LCEIL           shift and go to state 4
    PIPE            shift and go to state 12
    SIN             shift and go to state 11
    COS             shift and go to state 2
    TAN             shift and go to state 13
    ATAN            shift and go to state 16
    LOG             shift and go to state 3
    LN              shift and go to state 10
    EXP             shift and go to state 7
    INTEGRAL        shift and go to state 5
    ID              shift and go to state 20

    Term                           shift and go to state 14
    Identifier                     shift and go to state 18
    Expression                     shift and go to state 23
    Factor                         shift and go to state 8

state 2

    (20) Factor -> COS . LPAREN Expression RPAREN

    LPAREN          shift and go to state 24


state 3

    (24) Factor -> LOG . LPAREN Expression RPAREN

    LPAREN          shift and go to state 25


state 4

    (17) Factor -> LCEIL . Expression RCEIL
    (11) Expression -> . Expression PLUS Term
    (12) Expression -> . Expression MINUS Term
    (13) Expression -> . Term
    (14) Expression -> . FRAC LBRACE Expression RBRACE LBRACE Expression RBRACE
    (33) Expression -> . FRAC LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
    (34) Expression -> . FRAC LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression
    (6) Term -> . Term TIMES Factor
    (7) Term -> . Term DIVIDE Factor
    (8) Term -> . Term MOD Factor
    (9) Term -> . Term CARET LBRACE Factor RBRACE
    (10) Term -> . Factor
    (2) Factor -> . NUMBER
    (3) Factor -> . Identifier
    (4) Factor -> . INFINITY
    (5) Factor -> . LPAREN Expression RPAREN
    (15) Factor -> . SQRT LBRACE Expression RBRACE
    (16) Factor -> . LFLOOR Expression RFLOOR
    (17) Factor -> . LCEIL Expression RCEIL
    (18) Factor -> . PIPE Expression PIPE
    (19) Factor -> . SIN LPAREN Expression RPAREN
    (20) Factor -> . COS LPAREN Expression RPAREN
    (21) Factor -> . TAN LPAREN Expression RPAREN
    (22) Factor -> . ATAN LPAREN Expression COMMA Expression RPAREN
    (23) Factor -> . ATAN LPAREN Expression RPAREN
    (24) Factor -> . LOG LPAREN Expression RPAREN
    (25) Factor -> . LN LPAREN Expression RPAREN
    (26) Factor -> . EXP LPAREN Expression RPAREN
    (27) Factor -> . Identifier LPAREN ExpressionList RPAREN
    (28) Factor -> . Identifier LPAREN RPAREN
    (29) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (30) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
    (31) Factor -> . INTEGRAL CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (32) Factor -> . INTEGRAL Expression DIFFERENTIAL
    (35) Identifier -> . ID

    FRAC            shift and go to state 15
    NUMBER          shift and go to state 6
    INFINITY        shift and go to state 9
    LPAREN          shift and go to state 17
    SQRT            shift and go to state 21
    LFLOOR          shift and go to state 1
    LCEIL           shift and go to state 4
    PIPE            shift and go to state 12
    SIN             shift and go to state 11
    COS             shift and go to state 2
    TAN             shift and go to state 13
    ATAN            shift and go to state 16
    LOG             shift and go to state 3
    LN              shift and go to state 10
    EXP             shift and go to state 7
    INTEGRAL        shift and go to state 5
    ID              shift and go to state 20

    Term                           shift and go to state 14
    Identifier                     shift and go to state 18
    Expression                     shift and go to state 26
    Factor                         shift and go to state 8

state 5

    (29) Factor -> INTEGRAL . UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (30) Factor -> INTEGRAL . UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
    (31) Factor -> INTEGRAL . CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (32) Factor -> INTEGRAL . Expression DIFFERENTIAL
    (11) Expression -> . Expression PLUS Term
    (12) Expression -> . Expression MINUS Term
    (13) Expression -> . Term
    (14) Expression -> . FRAC LBRACE Expression RBRACE LBRACE Expression RBRACE
    (33) Expression -> . FRAC LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
    (34) Expression -> . FRAC LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression
    (6) Term -> . Term TIMES Factor
    (7) Term -> . Term DIVIDE Factor
    (8) Term -> . Term MOD Factor
    (9) Term -> . Term CARET LBRACE Factor RBRACE
    (10) Term -> . Factor
    (2) Factor -> . NUMBER
    (3) Factor -> . Identifier
    (4) Factor -> . INFINITY
    (5) Factor -> . LPAREN Expression RPAREN
    (15) Factor -> . SQRT LBRACE Expression RBRACE
    (16) Factor -> . LFLOOR Expression RFLOOR
    (17) Factor -> . LCEIL Expression RCEIL
    (18) Factor -> . PIPE Expression PIPE
    (19) Factor -> . SIN LPAREN Expression RPAREN
    (20) Factor -> . COS LPAREN Expression RPAREN
    (21) Factor -> . TAN LPAREN Expression RPAREN
    (22) Factor -> . ATAN LPAREN Expression COMMA Expression RPAREN
    (23) Factor -> . ATAN LPAREN Expression RPAREN
    (24) Factor -> . LOG LPAREN Expression RPAREN
    (25) Factor -> . LN LPAREN Expression RPAREN
    (26) Factor -> . EXP LPAREN Expression RPAREN
    (27) Factor -> . Identifier LPAREN ExpressionList RPAREN
    (28) Factor -> . Identifier LPAREN RPAREN
    (29) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (30) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
    (31) Factor -> . INTEGRAL CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (32) Factor -> . INTEGRAL Expression DIFFERENTIAL
    (35) Identifier -> . ID

    UNDERLINE       shift and go to state 28
    CARET           shift and go to state 27
    FRAC            shift and go to state 15
    NUMBER          shift and go to state 6
    INFINITY        shift and go to state 9
    LPAREN          shift and go to state 17
    SQRT            shift and go to state 21
    LFLOOR          shift and go to state 1
    LCEIL           shift and go to state 4
    PIPE            shift and go to state 12
    SIN             shift and go to state 11
    COS             shift and go to state 2
    TAN             shift and go to state 13
    ATAN            shift and go to state 16
    LOG             shift and go to state 3
    LN              shift and go to state 10
    EXP             shift and go to state 7
    INTEGRAL        shift and go to state 5
    ID              shift and go to state 20

    Term                           shift and go to state 14
    Identifier                     shift and go to state 18
    Expression                     shift and go to state 29
    Factor                         shift and go to state 8

state 6

    (2) Factor -> NUMBER .

    TIMES           reduce using rule 2 (Factor -> NUMBER .)
    DIVIDE          reduce using rule 2 (Factor -> NUMBER .)
    MOD             reduce using rule 2 (Factor -> NUMBER .)
    CARET           reduce using rule 2 (Factor -> NUMBER .)
    RBRACE          reduce using rule 2 (Factor -> NUMBER .)
    PLUS            reduce using rule 2 (Factor -> NUMBER .)
    MINUS           reduce using rule 2 (Factor -> NUMBER .)
    DIFFERENTIAL    reduce using rule 2 (Factor -> NUMBER .)
    COMMA           reduce using rule 2 (Factor -> NUMBER .)
    RPAREN          reduce using rule 2 (Factor -> NUMBER .)
    $end            reduce using rule 2 (Factor -> NUMBER .)
    RFLOOR          reduce using rule 2 (Factor -> NUMBER .)
    RCEIL           reduce using rule 2 (Factor -> NUMBER .)
    PIPE            reduce using rule 2 (Factor -> NUMBER .)


state 7

    (26) Factor -> EXP . LPAREN Expression RPAREN

    LPAREN          shift and go to state 30


state 8

    (10) Term -> Factor .

    TIMES           reduce using rule 10 (Term -> Factor .)
    DIVIDE          reduce using rule 10 (Term -> Factor .)
    MOD             reduce using rule 10 (Term -> Factor .)
    CARET           reduce using rule 10 (Term -> Factor .)
    PLUS            reduce using rule 10 (Term -> Factor .)
    MINUS           reduce using rule 10 (Term -> Factor .)
    $end            reduce using rule 10 (Term -> Factor .)
    RFLOOR          reduce using rule 10 (Term -> Factor .)
    RCEIL           reduce using rule 10 (Term -> Factor .)
    DIFFERENTIAL    reduce using rule 10 (Term -> Factor .)
    PIPE            reduce using rule 10 (Term -> Factor .)
    RPAREN          reduce using rule 10 (Term -> Factor .)
    RBRACE          reduce using rule 10 (Term -> Factor .)
    COMMA           reduce using rule 10 (Term -> Factor .)


state 9

    (4) Factor -> INFINITY .

    TIMES           reduce using rule 4 (Factor -> INFINITY .)
    DIVIDE          reduce using rule 4 (Factor -> INFINITY .)
    MOD             reduce using rule 4 (Factor -> INFINITY .)
    CARET           reduce using rule 4 (Factor -> INFINITY .)
    RBRACE          reduce using rule 4 (Factor -> INFINITY .)
    PLUS            reduce using rule 4 (Factor -> INFINITY .)
    MINUS           reduce using rule 4 (Factor -> INFINITY .)
    DIFFERENTIAL    reduce using rule 4 (Factor -> INFINITY .)
    COMMA           reduce using rule 4 (Factor -> INFINITY .)
    RPAREN          reduce using rule 4 (Factor -> INFINITY .)
    $end            reduce using rule 4 (Factor -> INFINITY .)
    RFLOOR          reduce using rule 4 (Factor -> INFINITY .)
    RCEIL           reduce using rule 4 (Factor -> INFINITY .)
    PIPE            reduce using rule 4 (Factor -> INFINITY .)


state 10

    (25) Factor -> LN . LPAREN Expression RPAREN

    LPAREN          shift and go to state 31


state 11

    (19) Factor -> SIN . LPAREN Expression RPAREN

    LPAREN          shift and go to state 32


state 12

    (18) Factor -> PIPE . Expression PIPE
    (11) Expression -> . Expression PLUS Term
    (12) Expression -> . Expression MINUS Term
    (13) Expression -> . Term
    (14) Expression -> . FRAC LBRACE Expression RBRACE LBRACE Expression RBRACE
    (33) Expression -> . FRAC LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
    (34) Expression -> . FRAC LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression
    (6) Term -> . Term TIMES Factor
    (7) Term -> . Term DIVIDE Factor
    (8) Term -> . Term MOD Factor
    (9) Term -> . Term CARET LBRACE Factor RBRACE
    (10) Term -> . Factor
    (2) Factor -> . NUMBER
    (3) Factor -> . Identifier
    (4) Factor -> . INFINITY
    (5) Factor -> . LPAREN Expression RPAREN
    (15) Factor -> . SQRT LBRACE Expression RBRACE
    (16) Factor -> . LFLOOR Expression RFLOOR
    (17) Factor -> . LCEIL Expression RCEIL
    (18) Factor -> . PIPE Expression PIPE
    (19) Factor -> . SIN LPAREN Expression RPAREN
    (20) Factor -> . COS LPAREN Expression RPAREN
    (21) Factor -> . TAN LPAREN Expression RPAREN
    (22) Factor -> . ATAN LPAREN Expression COMMA Expression RPAREN
    (23) Factor -> . ATAN LPAREN Expression RPAREN
    (24) Factor -> . LOG LPAREN Expression RPAREN
    (25) Factor -> . LN LPAREN Expression RPAREN
    (26) Factor -> . EXP LPAREN Expression RPAREN
    (27) Factor -> . Identifier LPAREN ExpressionList RPAREN
    (28) Factor -> . Identifier LPAREN RPAREN
    (29) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (30) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
    (31) Factor -> . INTEGRAL CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (32) Factor -> . INTEGRAL Expression DIFFERENTIAL
    (35) Identifier -> . ID

    FRAC            shift and go to state 15
    NUMBER          shift and go to state 6
    INFINITY        shift and go to state 9
    LPAREN          shift and go to state 17
    SQRT            shift and go to state 21
    LFLOOR          shift and go to state 1
    LCEIL           shift and go to state 4
    PIPE            shift and go to state 12
    SIN             shift and go to state 11
    COS             shift and go to state 2
    TAN             shift and go to state 13
    ATAN            shift and go to state 16
    LOG             shift and go to state 3
    LN              shift and go to state 10
    EXP             shift and go to state 7
    INTEGRAL        shift and go to state 5
    ID              shift and go to state 20

    Term                           shift and go to state 14
    Identifier                     shift and go to state 18
    Expression                     shift and go to state 33
    Factor                         shift and go to state 8

state 13

    (21) Factor -> TAN . LPAREN Expression RPAREN

    LPAREN          shift and go to state 34


state 14

    (13) Expression -> Term .
    (6) Term -> Term . TIMES Factor
    (7) Term -> Term . DIVIDE Factor
    (8) Term -> Term . MOD Factor
    (9) Term -> Term . CARET LBRACE Factor RBRACE

    RPAREN          reduce using rule 13 (Expression -> Term .)
    PLUS            reduce using rule 13 (Expression -> Term .)
    MINUS           reduce using rule 13 (Expression -> Term .)
    DIFFERENTIAL    reduce using rule 13 (Expression -> Term .)
    RBRACE          reduce using rule 13 (Expression -> Term .)
    COMMA           reduce using rule 13 (Expression -> Term .)
    RFLOOR          reduce using rule 13 (Expression -> Term .)
    RCEIL           reduce using rule 13 (Expression -> Term .)
    $end            reduce using rule 13 (Expression -> Term .)
    PIPE            reduce using rule 13 (Expression -> Term .)
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 36
    MOD             shift and go to state 38
    CARET           shift and go to state 35


state 15

    (14) Expression -> FRAC . LBRACE Expression RBRACE LBRACE Expression RBRACE
    (33) Expression -> FRAC . LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
    (34) Expression -> FRAC . LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression

    LBRACE          shift and go to state 39


state 16

    (22) Factor -> ATAN . LPAREN Expression COMMA Expression RPAREN
    (23) Factor -> ATAN . LPAREN Expression RPAREN

    LPAREN          shift and go to state 40


state 17

    (5) Factor -> LPAREN . Expression RPAREN
    (11) Expression -> . Expression PLUS Term
    (12) Expression -> . Expression MINUS Term
    (13) Expression -> . Term
    (14) Expression -> . FRAC LBRACE Expression RBRACE LBRACE Expression RBRACE
    (33) Expression -> . FRAC LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
    (34) Expression -> . FRAC LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression
    (6) Term -> . Term TIMES Factor
    (7) Term -> . Term DIVIDE Factor
    (8) Term -> . Term MOD Factor
    (9) Term -> . Term CARET LBRACE Factor RBRACE
    (10) Term -> . Factor
    (2) Factor -> . NUMBER
    (3) Factor -> . Identifier
    (4) Factor -> . INFINITY
    (5) Factor -> . LPAREN Expression RPAREN
    (15) Factor -> . SQRT LBRACE Expression RBRACE
    (16) Factor -> . LFLOOR Expression RFLOOR
    (17) Factor -> . LCEIL Expression RCEIL
    (18) Factor -> . PIPE Expression PIPE
    (19) Factor -> . SIN LPAREN Expression RPAREN
    (20) Factor -> . COS LPAREN Expression RPAREN
    (21) Factor -> . TAN LPAREN Expression RPAREN
    (22) Factor -> . ATAN LPAREN Expression COMMA Expression RPAREN
    (23) Factor -> . ATAN LPAREN Expression RPAREN
    (24) Factor -> . LOG LPAREN Expression RPAREN
    (25) Factor -> . LN LPAREN Expression RPAREN
    (26) Factor -> . EXP LPAREN Expression RPAREN
    (27) Factor -> . Identifier LPAREN ExpressionList RPAREN
    (28) Factor -> . Identifier LPAREN RPAREN
    (29) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (30) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
    (31) Factor -> . INTEGRAL CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (32) Factor -> . INTEGRAL Expression DIFFERENTIAL
    (35) Identifier -> . ID

    FRAC            shift and go to state 15
    NUMBER          shift and go to state 6
    INFINITY        shift and go to state 9
    LPAREN          shift and go to state 17
    SQRT            shift and go to state 21
    LFLOOR          shift and go to state 1
    LCEIL           shift and go to state 4
    PIPE            shift and go to state 12
    SIN             shift and go to state 11
    COS             shift and go to state 2
    TAN             shift and go to state 13
    ATAN            shift and go to state 16
    LOG             shift and go to state 3
    LN              shift and go to state 10
    EXP             shift and go to state 7
    INTEGRAL        shift and go to state 5
    ID              shift and go to state 20

    Term                           shift and go to state 14
    Identifier                     shift and go to state 18
    Expression                     shift and go to state 41
    Factor                         shift and go to state 8

state 18

    (3) Factor -> Identifier .
    (27) Factor -> Identifier . LPAREN ExpressionList RPAREN
    (28) Factor -> Identifier . LPAREN RPAREN

    TIMES           reduce using rule 3 (Factor -> Identifier .)
    DIVIDE          reduce using rule 3 (Factor -> Identifier .)
    MOD             reduce using rule 3 (Factor -> Identifier .)
    CARET           reduce using rule 3 (Factor -> Identifier .)
    RBRACE          reduce using rule 3 (Factor -> Identifier .)
    PLUS            reduce using rule 3 (Factor -> Identifier .)
    MINUS           reduce using rule 3 (Factor -> Identifier .)
    DIFFERENTIAL    reduce using rule 3 (Factor -> Identifier .)
    COMMA           reduce using rule 3 (Factor -> Identifier .)
    RPAREN          reduce using rule 3 (Factor -> Identifier .)
    $end            reduce using rule 3 (Factor -> Identifier .)
    RFLOOR          reduce using rule 3 (Factor -> Identifier .)
    RCEIL           reduce using rule 3 (Factor -> Identifier .)
    PIPE            reduce using rule 3 (Factor -> Identifier .)
    LPAREN          shift and go to state 42


state 19

    (1) MAIN -> Expression .
    (11) Expression -> Expression . PLUS Term
    (12) Expression -> Expression . MINUS Term

    $end            reduce using rule 1 (MAIN -> Expression .)
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44


state 20

    (35) Identifier -> ID .

    LPAREN          reduce using rule 35 (Identifier -> ID .)
    TIMES           reduce using rule 35 (Identifier -> ID .)
    DIVIDE          reduce using rule 35 (Identifier -> ID .)
    MOD             reduce using rule 35 (Identifier -> ID .)
    CARET           reduce using rule 35 (Identifier -> ID .)
    PLUS            reduce using rule 35 (Identifier -> ID .)
    MINUS           reduce using rule 35 (Identifier -> ID .)
    $end            reduce using rule 35 (Identifier -> ID .)
    RFLOOR          reduce using rule 35 (Identifier -> ID .)
    RCEIL           reduce using rule 35 (Identifier -> ID .)
    DIFFERENTIAL    reduce using rule 35 (Identifier -> ID .)
    PIPE            reduce using rule 35 (Identifier -> ID .)
    RPAREN          reduce using rule 35 (Identifier -> ID .)
    RBRACE          reduce using rule 35 (Identifier -> ID .)
    COMMA           reduce using rule 35 (Identifier -> ID .)


state 21

    (15) Factor -> SQRT . LBRACE Expression RBRACE

    LBRACE          shift and go to state 45


state 22

    (0) S' -> MAIN .



state 23

    (16) Factor -> LFLOOR Expression . RFLOOR
    (11) Expression -> Expression . PLUS Term
    (12) Expression -> Expression . MINUS Term

    RFLOOR          shift and go to state 46
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44


state 24

    (20) Factor -> COS LPAREN . Expression RPAREN
    (11) Expression -> . Expression PLUS Term
    (12) Expression -> . Expression MINUS Term
    (13) Expression -> . Term
    (14) Expression -> . FRAC LBRACE Expression RBRACE LBRACE Expression RBRACE
    (33) Expression -> . FRAC LBRACE D RBRACE LBRACE DIFFERENTIAL RBRACE Expression
    (34) Expression -> . FRAC LBRACE D CARET LBRACE NUMBER RBRACE RBRACE LBRACE DIFFERENTIAL CARET LBRACE NUMBER RBRACE RBRACE Expression
    (6) Term -> . Term TIMES Factor
    (7) Term -> . Term DIVIDE Factor
    (8) Term -> . Term MOD Factor
    (9) Term -> . Term CARET LBRACE Factor RBRACE
    (10) Term -> . Factor
    (2) Factor -> . NUMBER
    (3) Factor -> . Identifier
    (4) Factor -> . INFINITY
    (5) Factor -> . LPAREN Expression RPAREN
    (15) Factor -> . SQRT LBRACE Expression RBRACE
    (16) Factor -> . LFLOOR Expression RFLOOR
    (17) Factor -> . LCEIL Expression RCEIL
    (18) Factor -> . PIPE Expression PIPE
    (19) Factor -> . SIN LPAREN Expression RPAREN
    (20) Factor -> . COS LPAREN Expression RPAREN
    (21) Factor -> . TAN LPAREN Expression RPAREN
    (22) Factor -> . ATAN LPAREN Expression COMMA Expression RPAREN
    (23) Factor -> . ATAN LPAREN Expression RPAREN
    (24) Factor -> . LOG LPAREN Expression RPAREN
    (25) Factor -> . LN LPAREN Expression RPAREN
    (26) Factor -> . EXP LPAREN Expression RPAREN
    (27) Factor -> . Identifier LPAREN ExpressionList RPAREN
    (28) Factor -> . Identifier LPAREN RPAREN
    (29) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (30) Factor -> . INTEGRAL UNDERLINE LBRACE Expression RBRACE Expression DIFFERENTIAL
    (31) Factor -> . INTEGRAL CARET LBRACE Expression RBRACE Expression DIFFERENTIAL
    (32) Factor -> . INTEGRAL Expression DIFFERENTIAL
    (35) Identifier -> . ID

    FRAC            shift and go to state 15
    NUMBER          shift and go to state 6
    INFINITY        shift and go to state 9
    LPAREN          shift and go to state 17
    SQRT            shift and go to state 21
    LFLOOR          shift and go to state 1
    LCEIL           shift and go to state 4
    PIPE            shift and go to state 12
    SIN             shift and go to state 11
    COS             shift and go to state 2
    TAN             shift and go to state 13
    ATAN            shift and go to state 16
    LOG             shift and go to state 3
    LN              shift and go to state 10
    EXP             shift and go to state 7
    INTEGRAL        shift and go to state 5
    ID              shift and go to state 20
